# acts

./: CMakeLists.txt
Examples/: CMakeLists.txt
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/ANN/: CMakeLists.txt
Examples/Algorithms/ANN/include/ActsExamples/ANN/: ApproximateNearestNeighborAlgorithm.hpp
Examples/Algorithms/ANN/src/: ApproximateNearestNeighborAlgorithm.cpp
Examples/AnnoyPlay/: CMakeLists.txt
Examples/AnnoyPlay/acts_build_test/: ActsConfig.cmake  ActsConfigVersion.cmake  CMakeCache.txt  Makefile  cmake_install.cmake  this_acts.sh
Examples/AnnoyPlay/acts_build_test/Core/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Core/Acts/: ActsVersion.hpp
Examples/AnnoyPlay/acts_build_test/Examples/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Examples/Algorithms/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Examples/AnnoyPlay/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Examples/Detectors/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Examples/Framework/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Examples/Io/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Examples/Run/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Fatras/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Plugins/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Plugins/DD4hep/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Plugins/Digitization/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Plugins/Identification/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/acts_build_test/Plugins/Json/: Makefile  cmake_install.cmake
Examples/AnnoyPlay/src/: annoy_reco.cpp
Examples/Run/Reconstruction/: CMakeLists.txt  GenericRecANNTracks.cpp
Examples/Run/Reconstruction/Common/: CMakeLists.txt  RecANN.cpp  RecANN.hpp
(+123 files in other folders)
